fix job and method invoke